fix wrap serie

--- a/frontend/src/styles/karaokemugen.scss
+++ b/frontend/src/styles/karaokemugen.scss
@@ -1276,7 +1276,6 @@ input[type="text"]:focus, input[type="password"]:focus {
 
 	.karaTitleSerie {
 		font-weight: bold;
-		white-space:nowrap;
 	}
 
 	.karaTitleTitle {
